--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -149,7 +149,9 @@
     "- rank of song at it's peak week\n",
     "- number of weeks song was on the Top 100  \n",
     "\n",
-    "We selected only unique artists and songs, to ensure there were no duplicates, keeping only the earliest appearance on the chart to standardize the selections in the event of multiple appearances. Following song selection with the Kaggle dataset, we then obtained an API token to utilize the [Genius.com](https://genius.com/) API and [LyricGenius Library](https://pypi.org/project/lyricsgenius/) to conduct web scraping to pull the lyrics for the specified songs which became the corpus for this project."
+    "We selected only unique artists and songs, to ensure there were no duplicates, keeping only the earliest appearance on the chart to standardize the selections in the event of multiple appearances. Following song selection with the Kaggle dataset, we then obtained an API token to utilize the [Genius.com](https://genius.com/) API and [LyricGenius Library](https://pypi.org/project/lyricsgenius/) to conduct web scraping to pull the lyrics for the specified songs which became the corpus for this project.\n",
+    "\n",
+    "The acquired data can be easily accessed via a [Google Drive .csv file](https://drive.google.com/file/d/1S0dJ7-5x8NIgt1LranE3UETgl_JvukGT/view). "
    ]
   },
   {
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4a7a8a76-8a52-468b-84d5-13ad0a952e25",
    "metadata": {},
    "outputs": [
@@ -174,7 +176,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_64111/1360750017.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_prepare\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mprepare\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_explore\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexplore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_model\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_64111/2061801037.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_prepare\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mprep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_explore\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexplore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_model\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'draft_prepare'"
      ]
     }
@@ -184,7 +186,7 @@
     "import os\n",
     "import json\n",
     "import requests\n",
-    "import draft_prepare as prepare\n",
+    "import draft_prepare as prep\n",
     "import draft_explore as explore\n",
     "import draft_model as model\n",
     "\n",
@@ -206,9 +208,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# acquire data from .json saved and processed using functions found in wrangle.py\n",
-    "df = pd.read_ccsv(\"____.csv\")\n",
-    "df.head()"
+    "# acquire data from .csv saved and processed using functions found in acquire.py\n",
+    "df = pd.read_csv('../songs_0526.csv').drop(columns=['Unnamed: 0'])\n",
+    "df = draft_prepare.clean_df(df)\n",
+    "df = df.set_index('date')\n",
+    "df = df[(df.decade != 1950) & (df.decade != 2020)]"
    ]
   },
   {
@@ -251,24 +255,20 @@
    "id": "db9df564-01cc-463b-96a6-8536629a9e95",
    "metadata": {},
    "source": [
-    "After data acquisition, the dataframe was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the ______ function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. The function takes in the original ______ dataframe and returns it with the changes noted below.\n",
+    "After data acquisition, the dataframe was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the ______ function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. The function takes in the original acquire dataframe and returns it with the changes noted below.\n",
     "\n",
     "**Steps Taken to Clean & Prepare Data:**\n",
     "\n",
-    "- Basic Cleaning: \n",
+    "- Cleaning: \n",
     "    - Make all text lowercase\n",
     "    - Normalize, encode, and decode to remove accented text and special characters\n",
     "    - Tokenize strings to break words and punctuation into discrete units\n",
+    "    - Expand abbreviated contractions\n",
     "    - Lemmatize words to acquire base words\n",
     "    - Remove stopwords\n",
-    "    - Rename columns\n",
+    "    - Convert date to DateTime format\n",
+    "    - Remove song part identifiers ('lyrics' 'verse', 'chorus', 'hook', 'embed')\n",
     "    \n",
-    "___\n",
-    "\n",
-    "- Additional Cleaning:\n",
-    "\n",
-    "\n",
-    "\n",
     "---   \n",
     "- Address missing values, data errors, unnecessary data, and unclear values:\n",
     "    - \n",
@@ -277,19 +277,30 @@
     "    - Total dropped documents = _______\n",
     "---    \n",
     "- Create feature engineered columns:\n",
-    "    - unique words\n",
-    "    - character count\n",
-    "    - word count\n",
-    "    - unique word count\n",
-    "    - most common word count (2nd, 3rd, 4th, 5th most common)\n",
-    "    - unique bigram count\n",
-    "    - count of bigrams unique to each language in train set(this is done by creating a new column for each language)\n",
+    "    - Decade \n",
+    "    - Chorus Count\n",
+    "    - Verse Count\n",
+    "    - Verse/Chorus Ratio\n",
+    "    - Word Count\n",
+    "    - Unique Words per Song\n",
+    "    - Unique Words per Decade\n",
+    "    - Bigrams\n",
+    "    - Trigrams\n",
+    "    \n",
+    "- Apply Natural Language Processing (NLP Methods:\n",
+    "    - Topic Modeling\n",
+    "    - Sentiment Analysis\n",
     "    \n",
     "---\n",
-    "- Split corpus into train, validate, and test samples\n",
+    "- Split corpus into train, validate, and test samples \n",
+    "\n",
+    "\n",
+    "**Note on Splitting Data:**\n",
+    "\n",
+    "\n",
     "\n",
     "**Note on Missing Value Handling:**\n",
-    "The missing value removal equated to removing 9 observations/documents, which was about 9\\% of the data set. It still left a substantial number of observations above the minimum expectation of 100. If given more time with the data, it is recommended to investigate other ways to impute the missing data."
+    "The missing value removal equated to removing ______ observations/documents, which was about ___   \\% of the data set. It still left _______ observations, a substantial number. If given more time with the data, it is recommended to investigate other ways to impute the missing data."
    ]
   },
   {
@@ -316,7 +327,7 @@
    "outputs": [],
    "source": [
     "# import for prepare\n",
-    "import prepare\n",
+    "import draft_prepare\n",
     "import unicodedata\n",
     "import re\n",
     "\n",
@@ -387,7 +398,7 @@
    "source": [
     "After preparing the corpus, it was split into 3 samples; train, validate, and test using:\n",
     "\n",
-    "- Random State: ______\n",
+    "- Random State: 42\n",
     "- Test = 20% of the original dataset\n",
     "- The remaining 80% of the dataset is divided between valiidate and train\n",
     "    - Validate (.30*.80) = 24% of the original dataset\n",
@@ -558,10 +569,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "231badf5-44ed-479e-9061-269acdedde1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ANSWER 1: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77e572c3-dbdd-41b1-8774-d95ca678cf77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9faa39be-a1af-4ba8-89fb-21175c3d9c15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### QUESTION 2: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc9babc7-ec4c-4c65-b66a-2e9abd311f97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ANSWER 2: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c890fe1-1aba-41e6-8aab-f8cd13f7ff17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
@@ -569,7 +622,29 @@
    "id": "ceb2dc44-bf0e-483a-be7f-48cdf293df70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### QUESTION 3: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d345cc0e-e12c-4348-b4eb-1966e0a0709b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ANSWER 3: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebdbbc39-c2f5-4d07-a7a7-c1a19f2f21ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
@@ -577,7 +652,29 @@
    "id": "7d93106b-1655-45ca-95f8-912ab18e5910",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### QUESTION 4: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8370dc1c-f435-49d2-acfc-20102cabf765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ANSWER 4: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa8aac11-d688-4179-9e47-03ca04716aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
@@ -585,7 +682,29 @@
    "id": "d3f22a5b-4bf8-48fe-b613-1031a3ffcb57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### QUESTION 5: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2c86926-b78b-4d12-b2c8-59ea5b9263e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ANSWER 5: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9739c8f1-be77-41a4-abc4-8a7c8eb939ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
@@ -593,7 +712,9 @@
    "id": "506a35ce-6efe-49a5-9e1b-2fa9f52d04e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### EXPLORATION SUMMARY"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -609,7 +730,9 @@
    "id": "a15980c0-808c-448b-9a74-6fb25fff882e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### SPLIT???"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -623,7 +746,9 @@
    "cell_type": "markdown",
    "id": "9c4d6649-e624-4553-a888-6d541bc4abed",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Focus of Model Metrics"
+   ]
   },
   {
    "cell_type": "markdown",
