Updated Modeling Framework

--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -567,151 +567,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "231badf5-44ed-479e-9061-269acdedde1a",
+   "cell_type": "markdown",
+   "id": "f2d8992b-ef63-4cf4-849a-4b9039887562",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ANSWER 1: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77e572c3-dbdd-41b1-8774-d95ca678cf77",
+   "cell_type": "markdown",
+   "id": "503ce5b0-b5c9-4335-87a5-263e40c892d1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9faa39be-a1af-4ba8-89fb-21175c3d9c15",
+   "cell_type": "markdown",
+   "id": "10c1d4c5-a1f7-4ae2-8afb-686121e70eab",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### QUESTION 2: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc9babc7-ec4c-4c65-b66a-2e9abd311f97",
+   "cell_type": "markdown",
+   "id": "a441ce9a-bf1e-4826-853e-bb0cd8c9f0b9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ANSWER 2: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c890fe1-1aba-41e6-8aab-f8cd13f7ff17",
+   "cell_type": "markdown",
+   "id": "670b60c6-1f78-43a7-8994-4db9ec8954da",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ceb2dc44-bf0e-483a-be7f-48cdf293df70",
+   "cell_type": "markdown",
+   "id": "5fb530be-6211-44d0-a297-b3e23c62be54",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### QUESTION 3: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d345cc0e-e12c-4348-b4eb-1966e0a0709b",
+   "cell_type": "markdown",
+   "id": "a5ef1c5e-25ac-4926-bd7a-3ddd9e613b1b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ANSWER 3: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebdbbc39-c2f5-4d07-a7a7-c1a19f2f21ee",
+   "cell_type": "markdown",
+   "id": "38a1aeee-5f81-4b97-8993-1ccef77175ef",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d93106b-1655-45ca-95f8-912ab18e5910",
+   "cell_type": "markdown",
+   "id": "b7fbe992-9a12-4057-b452-cd6ec3ac3717",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### QUESTION 4: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8370dc1c-f435-49d2-acfc-20102cabf765",
+   "cell_type": "markdown",
+   "id": "f9df5ec9-4f5d-403b-818e-65b5481f27d2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ANSWER 4: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa8aac11-d688-4179-9e47-03ca04716aef",
+   "cell_type": "markdown",
+   "id": "0f18e4e0-6d19-433b-8296-2fa8b9695c33",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3f22a5b-4bf8-48fe-b613-1031a3ffcb57",
+   "cell_type": "markdown",
+   "id": "4c19ac86-6cf9-4469-92c1-e20cdaa94d9e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### QUESTION 5: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2c86926-b78b-4d12-b2c8-59ea5b9263e0",
+   "cell_type": "markdown",
+   "id": "c5a20a59-8136-45f6-ba55-48c3f8dcdc83",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ANSWER 5: "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9739c8f1-be77-41a4-abc4-8a7c8eb939ca",
+   "cell_type": "markdown",
+   "id": "ac10a9de-95a8-4daf-b1e3-e4cf8ef4de83",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "506a35ce-6efe-49a5-9e1b-2fa9f52d04e6",
+   "cell_type": "markdown",
+   "id": "d6d6c456-2f86-4b58-9fe2-275219c4f04f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### EXPLORATION SUMMARY"
    ]
@@ -747,7 +717,215 @@
    "id": "9c4d6649-e624-4553-a888-6d541bc4abed",
    "metadata": {},
    "source": [
-    "### Focus of Model Metrics"
+    "### Focus of Model Metrics\n",
+    "The target variable, Decade, is a categorical variable, therefore classification machine learning algorithms were used to fit to the training corpus and the models were evaluated on the validate corpus. The metrics used for model evaluation was accuracy, due to the multi-class classification approach. In other words, the model was optimized for identifying true positives, false positive, true negatives, and false negatives, therefore we focused on creating a model with the highest accuracy score from train to validate. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca5a63a-4615-42df-adb8-657de6c546fe",
+   "metadata": {},
+   "source": [
+    "### Set X & y\n",
+    "As mentioned above, two different approaches were taken to prepare the data for modeling. Feature engineering was done for exploratory analysis and even more for modeling. This however did not result in a significant improvement in the accuracy of the model. Therefore, the data was prepared for modeling by using TF-IDF vectorization which takes into account the word count in each file vs word count in the entire corpus. Below is how this was performed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48eb07a5-1f03-4b2b-b503-a6aa67026c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e2447d7-1416-40b0-8640-d055c4149517",
+   "metadata": {},
+   "source": [
+    "### Set Baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0f2bcd5-0951-420a-bf28-7bc695dd0851",
+   "metadata": {},
+   "source": [
+    "A baseline prediction was set by predicting _________________. We will evaluate the accuracy of our models in comparrison to that baseline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59991093-1945-4841-9d86-697669b28795",
+   "metadata": {},
+   "source": [
+    "### Condsider Feature Engineering\n",
+    "First lets look at the models with the lower accuracy, this is the df using feature engineering not including TF-IDF. \n",
+    "The following were adjustable:\n",
+    "- scale or not scale\n",
+    "- use only unique bigrams as features or use all numeric features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5905ad01-a1b6-44a8-8a7d-31c203270f34",
+   "metadata": {},
+   "source": [
+    "### Observation of models with feature engineering:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02eb1514-a9cf-4014-a47b-e5f64e7292d0",
+   "metadata": {},
+   "source": [
+    "### Consider TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4b11e5-7df4-4abf-a957-3ab1139f7ce9",
+   "metadata": {},
+   "source": [
+    "#### The Type of Classification models built were \n",
+    "- Decision Tree\n",
+    "- Random Forest\n",
+    "- Logistic Regression\n",
+    "\n",
+    "The models were run with many trials, adjusting parameters and algorithms to find the best performing model.  \n",
+    "\n",
+    "- All Logistic Regression models appeared to be overfit based upon their high performance on train accuracy compared to the significant drop off on validate accuracy.\n",
+    "    - This is in part due to the use of TF-IDF which analyzes each word in the train corpus and does not remove attributes.\n",
+    "- In general all models outperformed baseline, which had  ___ accuracy on train and ___ accuracy on validate.\n",
+    "- The Logistic Regression Model that performed best had a c of 1000 and solver of 'lbfgs', with train accuracy of 98% and validate accuracy of 61% performing 19% better than baseline with validate. It was then applied to the un-seen test data with an accuracy of 56%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a947abac-40e4-4485-9584-0210964ad131",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c5c1da-b384-49cf-bc1a-ebc3f864aa52",
+   "metadata": {},
+   "source": [
+    "### MODEL - DECISION TREE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "726cb86d-0aa6-476e-827c-af30f91d0e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54e4f2e6-460f-47c0-bd50-384db7d781de",
+   "metadata": {},
+   "source": [
+    "The Decision Tree model that performed the best on train & validate set had max_depth of 2, with 51% accuracy on train, and 45% accuracy on validate, so that model will be isolated below in the event it is the best performing model to be applied to the test (unseen) dataset. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e24f001-7ba7-448d-b335-a45e55f27d79",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "270052c1-bab2-47e8-b59a-5b71a6a86f7e",
+   "metadata": {},
+   "source": [
+    "### Model - RANDOM FOREST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a52c2c-be2b-430c-b83b-1b006fe62513",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10eab43c-070b-4722-aa80-f2e2cf34e497",
+   "metadata": {},
+   "source": [
+    "The Random Forest model that performed the best on train & validate set had max_depth of 100 and min_sample_leaf of 1, with 99%  accuracy on train, and 48% accuracy on validate, so that model will be isolated below in the event it is the best performing model to be applied to the test (unseen) dataset. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6066b3b-404f-4820-ae54-77ecd1370c61",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d8c6d5-67c9-4131-86ac-7c232895b562",
+   "metadata": {},
+   "source": [
+    "### Model - LOGISTIC REGRESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c41046d1-993b-40e7-be10-2beda9826b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caba7b5a-5cea-4ed8-91ca-6e93a8d9d0c7",
+   "metadata": {},
+   "source": [
+    "Evaluating the model with the validate data set was done in the function above for comparrison. The Logistic Regression Model that performed best had a c-statistic of 1000 with a train accuracy of 99% and validate accuracy of 61% performing 19% better than baseline on unseen (validate) data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6b2dbe2-e0d7-4eb4-8b0d-6844f6df113e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c950b1e-7948-4e56-b87d-e5a1f9b432ef",
+   "metadata": {},
+   "source": [
+    "### Best Performing Model Applied to Test Data (Unseen Data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18abc68d-c48e-4be4-b99c-f4cf971148f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d35b6129-5981-4594-81f5-2e4393feab0a",
+   "metadata": {},
+   "source": [
+    "This model is expected to perform around 56-60% accuracy in the future on data it has not seen, given no major changes in the data source, which is better than the baseline prediction."
    ]
   },
   {
@@ -764,6 +942,30 @@
    "metadata": {},
    "source": [
     "## V. CONCLUSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e32b456-0497-41c1-8239-197c363ecd04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3035711f-679d-4c25-aaf2-b7b5808e4042",
+   "metadata": {},
+   "source": [
+    "### RECOMMENDATIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "012c906d-cb4a-4783-995a-9cdc7a4f1c7d",
+   "metadata": {},
+   "source": [
+    "### NEXT STEPS"
    ]
   },
   {
