--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -165,22 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4a7a8a76-8a52-468b-84d5-13ad0a952e25",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'draft_prepare'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_64111/2061801037.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_prepare\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mprep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_explore\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexplore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraft_model\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'draft_prepare'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import for acquisition\n",
     "import os\n",
@@ -203,24 +191,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "292b3645-39b5-422e-8cf4-e884a2004574",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>date</th>\n",
+       "      <th>lyrics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>#1</td>\n",
+       "      <td>Nelly</td>\n",
+       "      <td>2001-10-20</td>\n",
+       "      <td>#1 LyricsUh uh uh I just gotta bring it to the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>#9 Dream</td>\n",
+       "      <td>John Lennon</td>\n",
+       "      <td>1974-12-21</td>\n",
+       "      <td>#9 Dream Lyrics[Verse 1] So long ago Was it in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>#Beautiful</td>\n",
+       "      <td>Mariah Carey Featuring Miguel</td>\n",
+       "      <td>2013-05-25</td>\n",
+       "      <td>#Beautiful Lyrics[Intro: Mariah Carey] Ah, ah,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>#SELFIE</td>\n",
+       "      <td>The Chainsmokers</td>\n",
+       "      <td>2014-03-15</td>\n",
+       "      <td>#SELFIE Lyrics[Verse 1] When Jason was at the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>#thatPOWER</td>\n",
+       "      <td>will.i.am Featuring Justin Bieber</td>\n",
+       "      <td>2013-04-06</td>\n",
+       "      <td>#thatPOWER Lyrics[Instrumental break]  [Pre-Ch...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       title                             artist        date  \\\n",
+       "0           2          #1                              Nelly  2001-10-20   \n",
+       "1           4    #9 Dream                        John Lennon  1974-12-21   \n",
+       "2           5  #Beautiful      Mariah Carey Featuring Miguel  2013-05-25   \n",
+       "3           6     #SELFIE                   The Chainsmokers  2014-03-15   \n",
+       "4           7  #thatPOWER  will.i.am Featuring Justin Bieber  2013-04-06   \n",
+       "\n",
+       "                                              lyrics  \n",
+       "0  #1 LyricsUh uh uh I just gotta bring it to the...  \n",
+       "1  #9 Dream Lyrics[Verse 1] So long ago Was it in...  \n",
+       "2  #Beautiful Lyrics[Intro: Mariah Carey] Ah, ah,...  \n",
+       "3  #SELFIE Lyrics[Verse 1] When Jason was at the ...  \n",
+       "4  #thatPOWER Lyrics[Instrumental break]  [Pre-Ch...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# acquire data from .csv saved and processed using functions found in acquire.py\n",
-    "df = pd.read_csv('../songs_0526.csv').drop(columns=['Unnamed: 0'])\n",
-    "df = draft_prepare.clean_df(df)\n",
-    "df = df.set_index('date')\n",
-    "df = df[(df.decade != 1950) & (df.decade != 2020)]"
+    "df = pd.read_csv('songs_0526.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a3880d05-efc6-46ab-972a-8c76a99d3a30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23762, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# obtain number of columns and rows for original dataframe\n",
     "df.shape"
@@ -231,7 +322,7 @@
    "id": "0cd63d50-ff49-481a-8a6e-ebefdec84ba3",
    "metadata": {},
    "source": [
-    "### The Original DataFrame Size: ____ rows, or documents, and ____ columns."
+    "### The Original DataFrame Size: 23,762 rows, or documents, and 5 columns."
    ]
   },
   {
@@ -255,14 +346,13 @@
    "id": "db9df564-01cc-463b-96a6-8536629a9e95",
    "metadata": {},
    "source": [
-    "After data acquisition, the dataframe was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the ______ function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. The function takes in the original acquire dataframe and returns it with the changes noted below.\n",
+    "After data acquisition, the dataframe was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the 'get_data' function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. The function takes in the original acquire dataframe and returns it with the changes noted below.\n",
     "\n",
     "**Steps Taken to Clean & Prepare Data:**\n",
     "\n",
     "- Cleaning: \n",
     "    - Make all text lowercase\n",
     "    - Normalize, encode, and decode to remove accented text and special characters\n",
-    "    - Tokenize strings to break words and punctuation into discrete units\n",
     "    - Expand abbreviated contractions\n",
     "    - Lemmatize words to acquire base words\n",
     "    - Remove stopwords\n",
@@ -271,10 +361,10 @@
     "    \n",
     "---   \n",
     "- Address missing values, data errors, unnecessary data, and unclear values:\n",
-    "    - \n",
-    "    - Drop missing values to prevent impediments in exploration and modeling: ______ documents/observations that had null values in the ______ column \n",
-    "    - Drop all rows where ________\n",
-    "    - Total dropped documents = _______\n",
+    "    - No null values\n",
+    "    - Data Errors : The API returned lyrics that were not the expected song's lyrics \n",
+    "        - Mannually checking some\n",
+    "        Compared title, if they match after cleaning manipulation, \n",
     "---    \n",
     "- Create feature engineered columns:\n",
     "    - Decade \n",
@@ -305,6 +395,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d44f477-d17f-4b5f-a2c1-4448d9837aed",
+   "metadata": {},
+   "source": [
+    "### Topic Modeling\n",
+    "\n",
+    "A way of identifying major topics found in large quantities of text data. We used the Latent Dirichlet Allocation to create groupings of labeled text within the songs to obtain common topics. (Cluster into similar groups and label each group). We obtianed 20 original topics, combined into 17. From there, pulled categories that were related (vice - violence, sex money/ relationship - affection, breakups, heartache, jealousy, sex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc584687-b4d2-4a86-8003-f5f18cb6088d",
+   "metadata": {},
+   "source": [
+    "### Sentiment Analysis\n",
+    "\n",
+    "Utilized sklearn.decomposition package. Examined the change in average sentiment score over tiem by looking at a rolling 5 year avereage and average by decade. Divided sentiment score into 5 categories _________. Looked at what portion of the total taken up by each category adn how it changed over time. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "937b3c41-a336-4a8c-9777-c13ff07c28ef",
    "metadata": {},
    "source": [
@@ -317,6 +427,29 @@
    "metadata": {},
    "source": [
     "## Results of Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d9f2991-5a51-464c-9aac-b7ccf3be680f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding sentiment category ****\r"
+     ]
+    }
+   ],
+   "source": [
+    "# apply the data preparation observations and tasks to clean the data using the prep_data function found in the prepare.py\n",
+    "df = prep.get_data()\n",
+    "# view first few rows of dataframe\n",
+    "# obtain the number of rows and columns for the updated/cleaned dataframe \n",
+    "print(df.shape)\n",
+    "df.head()"
    ]
   },
   {
@@ -339,21 +472,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c382de0-355d-40e6-9afe-137f3c86888b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# apply the data preparation observations and tasks to clean the data using the prep_data function found in the prepare.py\n",
-    "df = prepare.prep_data(df)\n",
-    "# view first few rows of dataframe\n",
-    "# obtain the number of rows and columns for the updated/cleaned dataframe \n",
-    "print(df.shape)\n",
-    "df.head()"
    ]
   },
   {
