--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -432,6 +432,28 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d32c4894-1f7c-4684-8b22-81b119ad2ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import for prepare\n",
+    "import draft_prepare\n",
+    "import unicodedata\n",
+    "import re\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.tokenize.toktok import ToktokTokenizer\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "from time import strftime\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0d9f2991-5a51-464c-9aac-b7ccf3be680f",
    "metadata": {},
    "outputs": [
@@ -439,7 +461,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23762, 22)ss!!!!!!!!!!!!!!!**\n"
+      "Great Success!!!!!!!!!!!!!!!**\n"
      ]
     },
     {
@@ -497,7 +519,7 @@
        "      <td>2000</td>\n",
        "      <td>2014</td>\n",
        "      <td>363</td>\n",
-       "      <td>blindside keep uncle sho naughty could uncouth...</td>\n",
+       "      <td>much win range hundredsix cocky could man pant...</td>\n",
        "      <td>228</td>\n",
        "      <td>...</td>\n",
        "      <td>[hook] [hook] [hook]</td>\n",
@@ -521,7 +543,7 @@
        "      <td>1970</td>\n",
        "      <td>842</td>\n",
        "      <td>135</td>\n",
-       "      <td>hear cold soul real bowakawa somebody dream ag...</td>\n",
+       "      <td>started music rain go could bowakawa cannot ah...</td>\n",
        "      <td>49</td>\n",
        "      <td>...</td>\n",
        "      <td>[verse 1] [pre-chorus 1] [chorus] [verse 2] [p...</td>\n",
@@ -545,7 +567,7 @@
        "      <td>2010</td>\n",
        "      <td>768</td>\n",
        "      <td>129</td>\n",
-       "      <td>smile hair mean til thrill red bright back moo...</td>\n",
+       "      <td>oh as light always red pretend anywhere care c...</td>\n",
        "      <td>54</td>\n",
        "      <td>...</td>\n",
        "      <td>[intro: mariah carey] [verse 1: miguel] [choru...</td>\n",
@@ -569,7 +591,7 @@
        "      <td>2010</td>\n",
        "      <td>954</td>\n",
        "      <td>172</td>\n",
-       "      <td>keep table need definitely took pick like nigh...</td>\n",
+       "      <td>even sleeping seeing okay go next another clev...</td>\n",
        "      <td>100</td>\n",
        "      <td>...</td>\n",
        "      <td>[verse 1] [drop 1] [verse 2] [drop 2] [verse 3...</td>\n",
@@ -593,7 +615,7 @@
        "      <td>2010</td>\n",
        "      <td>1238</td>\n",
        "      <td>208</td>\n",
-       "      <td>piggy keep kill like best high work yup level ...</td>\n",
+       "      <td>made hater loving good make call comincomin hi...</td>\n",
        "      <td>77</td>\n",
        "      <td>...</td>\n",
        "      <td>[instrumental break] [pre-chorus: justin biebe...</td>\n",
@@ -635,11 +657,11 @@
        "4  #thatPOWER Lyrics[Instrumental break]  [Pre-Ch...    2010             1238   \n",
        "\n",
        "   word_count                                       unique_words  \\\n",
-       "0         363  blindside keep uncle sho naughty could uncouth...   \n",
-       "1         135  hear cold soul real bowakawa somebody dream ag...   \n",
-       "2         129  smile hair mean til thrill red bright back moo...   \n",
-       "3         172  keep table need definitely took pick like nigh...   \n",
-       "4         208  piggy keep kill like best high work yup level ...   \n",
+       "0         363  much win range hundredsix cocky could man pant...   \n",
+       "1         135  started music rain go could bowakawa cannot ah...   \n",
+       "2         129  oh as light always red pretend anywhere care c...   \n",
+       "3         172  even sleeping seeing okay go next another clev...   \n",
+       "4         208  made hater loving good make call comincomin hi...   \n",
        "\n",
        "   unique_words_count  ...                                        place_words  \\\n",
        "0                 228  ...                               [hook] [hook] [hook]   \n",
@@ -679,7 +701,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,31 +710,7 @@
     "# apply the data preparation observations and tasks to clean the data using the prep_data function found in the prepare.py\n",
     "df = prep.get_data()\n",
     "# view first few rows of dataframe\n",
-    "# obtain the number of rows and columns for the updated/cleaned dataframe \n",
-    "print(df.shape)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d32c4894-1f7c-4684-8b22-81b119ad2ca3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import for prepare\n",
-    "import draft_prepare\n",
-    "import unicodedata\n",
-    "import re\n",
-    "\n",
-    "import nltk\n",
-    "from nltk.tokenize.toktok import ToktokTokenizer\n",
-    "from nltk.corpus import stopwords\n",
-    "\n",
-    "from time import strftime\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import RobustScaler\n",
-    "from collections import Counter"
    ]
   },
   {
@@ -768,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "687cb248-9647-41c5-9d50-30a4afa44e12",
    "metadata": {},
    "outputs": [
@@ -778,7 +776,7 @@
        "((13306, 22), (5703, 22), (4753, 22))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9dd7468a-7db3-4a6c-ba59-ca948831622c",
    "metadata": {},
    "outputs": [],
@@ -824,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "34ece60b-5838-41ee-ac9b-577d3db57fcc",
    "metadata": {},
    "outputs": [],
@@ -873,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "75f5ff97-3cea-44a4-935a-7d2cf7ac42db",
    "metadata": {},
    "outputs": [
@@ -884,7 +882,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/f5/w0p7b4_j2kdg3kvlsz7nhtn40000gn/T/ipykernel_24859/2690338430.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create visualization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pie'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Language'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mautopct\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"%1.1f%%\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# remove y axis label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#add title\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_68374/2690338430.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create visualization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pie'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Language'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mautopct\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"%1.1f%%\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# remove y axis label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#add title\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/anaconda3/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'language'"
      ]
@@ -1097,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7df42ddd",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "15bd6310",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "48eb07a5-1f03-4b2b-b503-a6aa67026c6d",
    "metadata": {},
    "outputs": [],
@@ -1229,77 +1227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "726cb86d-0aa6-476e-827c-af30f91d0e0a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* Returning Results ***********\r"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model_number</th>\n",
-       "      <th>model_type</th>\n",
-       "      <th>train_accuracy</th>\n",
-       "      <th>validate_accuracy</th>\n",
-       "      <th>test_accuracy</th>\n",
-       "      <th>better_than_baseline</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>baseline_accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>baseline</td>\n",
-       "      <td>baseline</td>\n",
-       "      <td>0.205677</td>\n",
-       "      <td>0.20559</td>\n",
-       "      <td>0.205763</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  model_number model_type train_accuracy validate_accuracy test_accuracy  \\\n",
-       "0     baseline   baseline       0.205677           0.20559      0.205763   \n",
-       "\n",
-       "  better_than_baseline max_depth baseline_accuracy  \n",
-       "0                False       NaN               NaN  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = model.run_decision_tree_models(df)\n",
     "results.head(1) # show baseline"
@@ -1307,96 +1238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d52ae935",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model_number</th>\n",
-       "      <th>model_type</th>\n",
-       "      <th>train_accuracy</th>\n",
-       "      <th>validate_accuracy</th>\n",
-       "      <th>test_accuracy</th>\n",
-       "      <th>better_than_baseline</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>baseline_accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.411755</td>\n",
-       "      <td>0.312324</td>\n",
-       "      <td>0.301216</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.20559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.999759</td>\n",
-       "      <td>0.300694</td>\n",
-       "      <td>0.298514</td>\n",
-       "      <td>True</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.20559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.321058</td>\n",
-       "      <td>0.295629</td>\n",
-       "      <td>0.296938</td>\n",
-       "      <td>True</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.20559</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  model_number              model_type train_accuracy validate_accuracy  \\\n",
-       "6            6  DecisionTreeClassifier       0.411755          0.312324   \n",
-       "7            7  DecisionTreeClassifier       0.999759          0.300694   \n",
-       "5            5  DecisionTreeClassifier       0.321058          0.295629   \n",
-       "\n",
-       "  test_accuracy better_than_baseline max_depth baseline_accuracy  \n",
-       "6      0.301216                 True        10           0.20559  \n",
-       "7      0.298514                 True       100           0.20559  \n",
-       "5      0.296938                 True         5           0.20559  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results.sort_values('validate_accuracy', ascending=False).head(3)"
    ]
@@ -1427,18 +1272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d6a52c2c-be2b-430c-b83b-1b006fe62513",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Making models with max_depth = 4... out of '1, 2, 3, 4, 5, 10, 100'\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results2 = model.run_random_forest_models(df)\n",
     "results2.sort_values('validate_accuracy', ascending=False).head(3)"
@@ -1575,7 +1412,7 @@
    "hash": "3067ead486e059ec00ffe7555bdb889e6e264a24dc711bf108106cc7baee8d5d"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
